--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+/*
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -25,6 +25,8 @@ body {
     text-wrap: balance;
   }
 }
+
+ */
 
 @layer base {
   :root {
